# smart-rental-pricing

./: .env.example  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  INSTALL.md  Makefile  README.md  api.http  docker-compose.yml  pyproject.toml  run_pipeline.py  run_scraper.sh  setup.sh
airflow/: Dockerfile
airflow/dags/: data_pipeline_dag.py  scrape_jiji_dag.py  test_dag.py
alembic/: env.py
alembic/versions/: 0a35463efb90_add_listing_type_column_and_index.py  8be8b6dfde82_initial_schema.py  994501de2863_create_listings_table.py
api/: main.py
api/routes/: price.py  recommend.py
app/: main.py
app/core/: config.py  tags.py
app/crud/: listings.py
app/db/: session.py
app/db/models/: listings.py
app/dependencies/: security.py
app/schema/: listings.py
config/: settings.toml  settings.yaml
configs/: settings.yaml
dashboard/: app.py
data/processed/: rentals.db
data/raw/: apartment_listings.json  apartment_listings_rent_20250419_231503.json  apartment_listings_sale_20250419_231721.json  apartment_listings_sale_20250420_061205.json
data/raw/failed_data/: yZZHhLuRRvq4UMi3h8SbxVgR.json
docker/api/: Dockerfile
docker/dashboard/: Dockerfile
monitoring/: run_monitoring.py
notebooks/: about_project.html  about_project.ipynb
scraper/: jiji_scraper.py
src/cleaner/: cleaner.py
src/model/: train.py
src/publisher/: publisher.py  publisher_api.py  publisher_s3.py
src/scraper/: collector.py  parser.py  scraper.py
src/utils/: cleaner_utils.py  publisher_utils.py  scraper_utils.py  settings.py
(+3 files in other folders)
